// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test classes Advanced tests 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": null,
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "A",
              "resolution": "uqn",
            },
          ],
        },
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "bar",
              },
              "kind": "traitalias",
              "method": "foo",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "B",
              "resolution": "uqn",
            },
          ],
        },
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "leadingComments": Array [
            CommentLine {
              "kind": "commentline",
              "offset": 87,
              "value": "// comment
",
            },
            CommentBlock {
              "kind": "commentblock",
              "offset": 106,
              "value": "/* boo */",
            },
            CommentBlock {
              "kind": "commentblock",
              "offset": 124,
              "value": "/** doc
         * data
           foo
         */",
            },
          ],
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "var",
              },
              "value": Boolean {
                "kind": "boolean",
                "raw": "true",
                "value": true,
              },
            },
          ],
          "visibility": null,
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": true,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "boo",
          },
          "nullable": false,
          "type": null,
          "visibility": "private",
        },
      ],
      "extends": null,
      "implements": Array [
        ClassReference {
          "kind": "classreference",
          "name": "boo",
          "resolution": "uqn",
        },
      ],
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
    Interface {
      "body": Array [
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "A",
              },
              "value": Number {
                "kind": "number",
                "value": "1.5",
              },
            },
          ],
          "kind": "classconstant",
          "leadingComments": Array [
            CommentLine {
              "kind": "commentline",
              "offset": 332,
              "value": "// some doc
",
            },
          ],
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": null,
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "leadingComments": Array [
            CommentBlock {
              "kind": "commentblock",
              "offset": 375,
              "value": "/** foo */",
            },
          ],
          "name": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "nullable": false,
          "type": null,
          "visibility": "protected",
        },
      ],
      "extends": Array [
        ClassReference {
          "kind": "classreference",
          "name": "something",
          "resolution": "uqn",
        },
      ],
      "kind": "interface",
      "name": Identifier {
        "kind": "identifier",
        "name": "boo",
      },
    },
    Trait {
      "body": Array [
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "A",
              },
              "value": Number {
                "kind": "number",
                "value": "1.5",
              },
            },
          ],
          "kind": "classconstant",
          "leadingComments": Array [
            CommentLine {
              "kind": "commentline",
              "offset": 455,
              "value": "// some doc
",
            },
          ],
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": null,
          "byref": false,
          "isAbstract": true,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "nullable": false,
          "type": null,
          "visibility": "protected",
        },
      ],
      "kind": "trait",
      "name": Identifier {
        "kind": "identifier",
        "name": "line",
      },
    },
  ],
  "comments": Array [
    CommentLine {
      "kind": "commentline",
      "offset": 87,
      "value": "// comment
",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 106,
      "value": "/* boo */",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 124,
      "value": "/** doc
         * data
           foo
         */",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 332,
      "value": "// some doc
",
    },
    CommentBlock {
      "kind": "commentblock",
      "offset": 375,
      "value": "/** foo */",
    },
    CommentLine {
      "kind": "commentline",
      "offset": 455,
      "value": "// some doc
",
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes Implement #183 : static keyword as identifier 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "foo",
                    },
                    "what": ParentReference {
                      "kind": "parentreference",
                      "raw": "parent",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "bar",
                    },
                    "what": SelfReference {
                      "kind": "selfreference",
                      "raw": "self",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "baz",
                    },
                    "what": StaticReference {
                      "kind": "staticreference",
                      "raw": "static",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "fooBar",
                    },
                    "what": ClassReference {
                      "kind": "classreference",
                      "name": "A",
                      "resolution": "uqn",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Call {
                  "arguments": Array [],
                  "kind": "call",
                  "what": PropertyLookup {
                    "kind": "propertylookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "fooBaz",
                    },
                    "what": Variable {
                      "byref": false,
                      "curly": false,
                      "kind": "variable",
                      "name": "this",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": true,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "test",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes Test js properties 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        PropertyStatement {
          "isStatic": true,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "constructor",
              },
              "value": null,
            },
          ],
          "visibility": "",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "constructor",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Assign {
                  "kind": "assign",
                  "left": PropertyLookup {
                    "kind": "propertylookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "constructor",
                    },
                    "what": Variable {
                      "byref": false,
                      "curly": false,
                      "kind": "variable",
                      "name": "this",
                    },
                  },
                  "operator": "=",
                  "right": Identifier {
                    "kind": "identifier",
                    "name": ClassReference {
                      "kind": "classreference",
                      "name": "null",
                      "resolution": "uqn",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
              ExpressionStatement {
                "expression": Assign {
                  "kind": "assign",
                  "left": StaticLookup {
                    "kind": "staticlookup",
                    "offset": Variable {
                      "byref": false,
                      "curly": false,
                      "kind": "variable",
                      "name": "constructor",
                    },
                    "what": SelfReference {
                      "kind": "selfreference",
                      "raw": "self",
                    },
                  },
                  "operator": "=",
                  "right": Identifier {
                    "kind": "identifier",
                    "name": ClassReference {
                      "kind": "classreference",
                      "name": "null",
                      "resolution": "uqn",
                    },
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__proto__",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "__proto__",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes Test of silent mode 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        TraitUse {
          "adaptations": null,
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "A",
              "resolution": "uqn",
            },
          ],
        },
        TraitUse {
          "adaptations": Array [
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "foo",
              "trait": null,
              "visibility": "",
            },
            TraitAlias {
              "as": null,
              "kind": "traitalias",
              "method": "",
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "B",
              "resolution": "uqn",
            },
          ],
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
  ],
  "errors": Array [
    Error {
      "expected": ";",
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected 'use' (T_USE), expecting ';' on line 4",
      "token": "'use' (T_USE)",
    },
    Error {
      "expected": Array [
        119,
        200,
      ],
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected '}' on line 4",
      "token": "'}'",
    },
    Error {
      "expected": ";",
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected '}', expecting ';' on line 4",
      "token": "'}'",
    },
    Error {
      "expected": 105,
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected ';', expecting T_STRING on line 4",
      "token": "';'",
    },
    Error {
      "expected": Array [
        119,
        200,
      ],
      "kind": "error",
      "line": 4,
      "message": "Parse Error : syntax error, unexpected ';' on line 4",
      "token": "';'",
    },
    Error {
      "expected": "}",
      "kind": "error",
      "line": 5,
      "message": "Parse Error : syntax error, expecting '}' on line 5",
      "token": "the end of file (EOF)",
    },
  ],
  "kind": "program",
}
`;

exports[`Test classes Validate usual declarations 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "FOO",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"azerty\\"",
                "unicode": false,
                "value": "azerty",
              },
            },
          ],
          "kind": "classconstant",
          "visibility": "",
        },
        PropertyStatement {
          "isStatic": true,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "var",
              },
              "value": null,
            },
          ],
          "visibility": "public",
        },
        Method {
          "arguments": Array [
            Parameter {
              "byref": false,
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "data",
              },
              "nullable": false,
              "type": TypeReference {
                "kind": "typereference",
                "name": "array",
                "raw": "array",
              },
              "value": Identifier {
                "kind": "identifier",
                "name": ClassReference {
                  "kind": "classreference",
                  "name": "null",
                  "resolution": "uqn",
                },
              },
              "variadic": false,
            },
          ],
          "body": Block {
            "children": Array [
              ExpressionStatement {
                "expression": Assign {
                  "kind": "assign",
                  "left": PropertyLookup {
                    "kind": "propertylookup",
                    "offset": Identifier {
                      "kind": "identifier",
                      "name": "data",
                    },
                    "what": Variable {
                      "byref": false,
                      "curly": false,
                      "kind": "variable",
                      "name": "this",
                    },
                  },
                  "operator": "=",
                  "right": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "name": "data",
                  },
                },
                "kind": "expressionstatement",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "__construct",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
        ClassConstant {
          "constants": Array [
            Constant {
              "kind": "constant",
              "name": Identifier {
                "kind": "identifier",
                "name": "list",
              },
              "value": String {
                "isDoubleQuote": true,
                "kind": "string",
                "raw": "\\"bar\\"",
                "unicode": false,
                "value": "bar",
              },
            },
          ],
          "kind": "classconstant",
          "visibility": "",
        },
        Method {
          "arguments": Array [
            Parameter {
              "byref": false,
              "kind": "parameter",
              "name": Identifier {
                "kind": "identifier",
                "name": "foo",
              },
              "nullable": false,
              "type": null,
              "value": StaticLookup {
                "kind": "staticlookup",
                "offset": Identifier {
                  "kind": "identifier",
                  "name": "list",
                },
                "what": SelfReference {
                  "kind": "selfreference",
                  "raw": "self",
                },
              },
              "variadic": false,
            },
          ],
          "body": Block {
            "children": Array [
              Return {
                "expr": StaticLookup {
                  "kind": "staticlookup",
                  "offset": Identifier {
                    "kind": "identifier",
                    "name": "list",
                  },
                  "what": Variable {
                    "byref": false,
                    "curly": false,
                    "kind": "variable",
                    "name": "this",
                  },
                },
                "kind": "return",
              },
            ],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "new",
          },
          "nullable": false,
          "type": null,
          "visibility": "public",
        },
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "foo",
              },
              "value": null,
            },
          ],
          "visibility": "protected",
        },
        PropertyStatement {
          "isStatic": false,
          "kind": "propertystatement",
          "properties": Array [
            Property {
              "kind": "property",
              "name": Identifier {
                "kind": "identifier",
                "name": "bar",
              },
              "value": null,
            },
          ],
          "visibility": "private",
        },
        Method {
          "arguments": Array [],
          "body": Block {
            "children": Array [],
            "kind": "block",
          },
          "byref": false,
          "isAbstract": false,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "foobar",
          },
          "nullable": false,
          "type": null,
          "visibility": "",
        },
      ],
      "extends": ClassReference {
        "kind": "classreference",
        "name": "bar",
        "resolution": "uqn",
      },
      "implements": Array [
        ClassReference {
          "kind": "classreference",
          "name": "bim",
          "resolution": "uqn",
        },
        ClassReference {
          "kind": "classreference",
          "name": "bam",
          "resolution": "uqn",
        },
        ClassReference {
          "kind": "classreference",
          "name": "boum",
          "resolution": "uqn",
        },
      ],
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": true,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "foo",
      },
    },
    Class {
      "body": Array [
        TraitUse {
          "adaptations": Array [
            TraitPrecedence {
              "instead": Array [
                ClassReference {
                  "kind": "classreference",
                  "name": "A",
                  "resolution": "uqn",
                },
              ],
              "kind": "traitprecedence",
              "method": Identifier {
                "kind": "identifier",
                "name": "smallTalk",
              },
              "trait": ClassReference {
                "kind": "classreference",
                "name": "B",
                "resolution": "uqn",
              },
            },
            TraitPrecedence {
              "instead": Array [
                ClassReference {
                  "kind": "classreference",
                  "name": "B",
                  "resolution": "uqn",
                },
                ClassReference {
                  "kind": "classreference",
                  "name": "C",
                  "resolution": "uqn",
                },
              ],
              "kind": "traitprecedence",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": ClassReference {
                "kind": "classreference",
                "name": "A",
                "resolution": "uqn",
              },
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "talk",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": ClassReference {
                "kind": "classreference",
                "name": "B",
                "resolution": "uqn",
              },
              "visibility": "public",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "talk",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": ClassReference {
                "kind": "classreference",
                "name": "B",
                "resolution": "uqn",
              },
              "visibility": "protected",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "talk",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "bigTalk",
              },
              "trait": ClassReference {
                "kind": "classreference",
                "name": "B",
                "resolution": "uqn",
              },
              "visibility": "private",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "list",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "new",
              },
              "trait": ClassReference {
                "kind": "classreference",
                "name": "A",
                "resolution": "uqn",
              },
              "visibility": "",
            },
            TraitAlias {
              "as": Identifier {
                "kind": "identifier",
                "name": "new",
              },
              "kind": "traitalias",
              "method": Identifier {
                "kind": "identifier",
                "name": "list",
              },
              "trait": null,
              "visibility": "",
            },
          ],
          "kind": "traituse",
          "traits": Array [
            ClassReference {
              "kind": "classreference",
              "name": "A",
              "resolution": "uqn",
            },
            ClassReference {
              "kind": "classreference",
              "name": "B",
              "resolution": "uqn",
            },
          ],
        },
        Method {
          "arguments": Array [],
          "body": null,
          "byref": true,
          "isAbstract": true,
          "isFinal": false,
          "isStatic": false,
          "kind": "method",
          "name": Identifier {
            "kind": "identifier",
            "name": "foo",
          },
          "nullable": false,
          "type": ClassReference {
            "kind": "classreference",
            "name": "bar",
            "resolution": "uqn",
          },
          "visibility": "protected",
        },
      ],
      "extends": null,
      "implements": null,
      "isAbstract": true,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "bar",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes class name as identifier 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "A",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;

exports[`Test classes empty 1`] = `
Program {
  "children": Array [
    Class {
      "body": Array [],
      "extends": null,
      "implements": null,
      "isAbstract": false,
      "isAnonymous": false,
      "isFinal": false,
      "kind": "class",
      "name": Identifier {
        "kind": "identifier",
        "name": "Foo",
      },
    },
  ],
  "errors": Array [],
  "kind": "program",
}
`;
